--- a/index.html
+++ b/index.html
@@ -47,11 +47,109 @@
         </div>
     </header>
     <section class="container-fluid">
-        <div class="row row-table">
+        <div class="row">
+            <div class="col-md-4 bg-color-personal-info section-column">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="section-heading uppercase">
+                            Personal Info
+                        </h3>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Name:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            Mark Dawson
+                        </p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Location:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            Newcastle-under-Lyme, Staffordshire, England
+                        </p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Contact Number:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            07808 650205
+                        </p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            E-mail:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            mdonmobile@gmail.com
+                        </p>
+                    </div>
+                </div>
+            </div>
             <div class="col-md-8 bg-color-three-reasons section-column">
                 <div class="row">
                     <div class="col">
                         <h3 class="section-heading uppercase">About Me</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-question" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reason-heading uppercase">What do I do?</h4>
+                                <p>
+                                    I'm a skilled full-stack developer bringing a wealth of life and technical experience to whatever I do.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-thumbs-up" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reason-heading uppercase">How do I do it?</h4>
+                                <p>
+                                    I follow form as well as function. I understand that aesthetics combined with application speed, security, and reliability combine to create a great user experience.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-bolt" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reason-heading uppercase">Why hire me?</h4>
+                                <p>
+                                    I work quickly and effectively to get things built across the stack. I'm bright and enthusiastic when working in great teams and also a self-starter when going solo.
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -83,25 +181,22 @@
                         <a target="_blank" href="#">
                             <i class="fa fa-linkedin" aria-hidden="true"></i>
                         <span class="sr-only">linked in</span>  
-                        
                         </a>
                     </li>
                     <li class="list-inline-item">
                         <a target="_blank" href="#">
                             <i class="fa fa-twitter" aria-hidden="true"></i>
                         <span class="sr-only">Twitter</span> 
-                                                </a>
+                        </a>
                     </li>
-                            <li class="list-inline-item">
+                    <li class="list-inline-item">
                         <a target="_blank" href="#">
                             <i class="fa fa-youtube" aria-hidden="true"></i>
-                        <span class="sr-only">YouTube</span> 
+                        <span class="sr-only">YouTube</span>
                 </ul>
             </div>
         </div>
-
     </footer>
-
 </body>
 
 </html>
