--- a/resume.html
+++ b/resume.html
@@ -29,16 +29,16 @@
                     <div class="col">
                         <ul id="nav" class="list-inline menucontainer">
                             <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
+                                <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
+                                <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
+                                <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
+                                <a href="assets/cv/markdawson_cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
                             </li>
                         </ul>
                     </div>
@@ -56,21 +56,23 @@
                         </h3>
                     </div>
                 </div>
-                <div class="timeline-item" data-dates="11/2015 - Present">
-                    <h4>British Gas</h4>
-                    <p>Heating Sales Advisor</p>
-                </div>
-                <div class="timeline-item" data-dates="11/2010 - 06/2015">
-                    <h4>British Gas</h4>
-                    <p>District Planner</p>
-                </div>
-                <div class="timeline-item" data-dates="03/2010 - 11/2010">
-                    <h4>WRT Ltd</h4>
-                    <p>HMarketing Representative</p>
-                </div>
-                <div class="timeline-item" data-dates="11/2008 - 03/2010">
-                    <h4>Safe Style ltd</h4>
-                    <p>Marketing Representative</p>
+                <div class="history-items">
+                    <div class="timeline-item" data-dates="11/2015 - Present">
+                        <h4>British Gas</h4>
+                        <p>Heating Sales Advisor</p>
+                    </div>
+                    <div class="timeline-item" data-dates="11/2010 - 06/2015">
+                        <h4>British Gas</h4>
+                        <p>District Planner</p>
+                    </div>
+                    <div class="timeline-item" data-dates="03/2010 - 11/2010">
+                        <h4>WRT Ltd</h4>
+                        <p>HMarketing Representative</p>
+                    </div>
+                    <div class="timeline-item" data-dates="11/2008 - 03/2010">
+                        <h4>Safe Style ltd</h4>
+                        <p>Marketing Representative</p>
+                    </div>
                 </div>
             </div>
             <div class="col-md-8 bg-color-three-reasons section-column">
@@ -154,7 +156,7 @@
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
                     Need a printable version of my CV? Download it here!
-                    <a href="#" target="_blank" class="cv-pdf">
+                    <a href="assets/cv/markdawson_cv.pdf" target="_blank" class="cv-pdf">
                         <i class="fa fa-download" aria-hidden="true"></i>
                         <span class="sr-only">Download link</span>
                     </a>
